2009-02-16 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.92

2009-02-16 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.91 release.

2009-02-10  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.schemas.in: Change long key
	descriptions according to bug #571133.

2009-02-01 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.91

2009-02-01 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.90 release.

2009-01-19 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version bump: 2.25.90
	
2009-01-19 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.25.5 release.

2009-01-12  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Add missing <locale.h>. Bug #567483.

2009-01-09  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	reviewed by: Gerd Kohlberger.

	* data/pointer-capture-applet.schemas.in: Fixed a typo in my previous
	commit.

2009-01-09  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/mt-main.c: Use N_() instead of _() for command-line options.
	Fixes bug #567197.

2009-01-09  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	reviewed by: Gerd Kohlberger

	* data/pointer-capture-applet.schemas.in: More improvements to gconf
	key descriptions. Closes bug #552222.

2009-01-09  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.schemas.in: Improve key
	descriptions. Bug #552222.

2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/*.glade: Remove old .glade files from tree.

2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* data/pointer-capture-applet.ui:
	* data/mousetweaks.ui:
	
	Use standard icon name. Bug #545059

2009-01-07  Gerd Kohlberger  <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c:
	* data/dwell-click-applet.ui:
	
	Change the enable button to use a stock icon instead of the